@@ -42,9 +42,9 @@ AR_STATIC_ARGS = cr
 NAME = MIDI-Perl
 DISTNAME = MIDI-Perl
 NAME_SYM = MIDI_Perl
-VERSION = 0.61
-VERSION_SYM = 0_61
-XS_VERSION = 0.61
+VERSION = 0.62
+VERSION_SYM = 0_62
+XS_VERSION = 0.62
 INST_BIN = ./blib/bin
 INST_EXE = ./blib/script
 INST_LIB = ./blib/lib
